[package]
name = "zome_integrity_utils"
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[lints.rust]
non_upper_case_globals = "allow"
unused_doc_comments = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
unused_attributes = "allow"

[dependencies]
serde = { version = "1.0.203", default-features = false }
holo_hash = { version = "=0.3.2", features = ["encoding", "serialization"], default-features = false}
